# postgres-SQL_tasks

./: pyproject.toml
homework-1/: main.py
homework-2/: groupby.sql
homework-3/: queries.sql
homework-4/: alter_northwind.sql  alter_student.sql
